@@ -3816,7 +3816,7 @@ channels are specified, then thresholding is done based on computed pixel
 intensity.
 </dd>
 <dt>Threshold-White-Negate</dt>
-<dd>Result is negated (inverted) if channel value is greater than
+<dd>Result is set to black if channel value is greater than
 rvalue and is unchanged if it is less than or equal to rvalue. If
 <strong>all</strong> channels are specified, then thresholding is done based on
 computed pixel intensity.
@@ -3829,7 +3829,7 @@ used to remove apparent noise from the dark parts of an image. If
 computed pixel intensity.
 </dd>
 <dt>Threshold-Black-Negate</dt>
-<dd>Result is negated (inverted) if channel value is less than than
+<dd>Result is set to white if channel value is less than than
 rvalue and is unchanged if it is greater than or equal to rvalue. If
 <strong>all</strong> channels are specified, then thresholding is done based on
 computed pixel intensity.
